--- a/index.html
+++ b/index.html
@@ -446,8 +446,23 @@
           </div>
         </div>
       </section>
-      <section>
-        
+      <section id="assiociates">
+        <div>
+          <img src="images/logo-01-w.png" alt="">
+        </div>
+        <div>
+          <img src="images/logo-04-w.png" alt="">
+          
+        </div>
+        <div>
+          <img src="images/logo-03-w.png" alt="">
+        </div>
+        <div>
+          <img src="images/logo-02-w.png" alt="">
+        </div>
+        <div>
+          <img src="images/logo-05-w.png" alt="">
+        </div>
       </section>
       <section></section>
     </main>
