--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </button>
           </div>
         </div>
-        <div>
+        <div id="man">
           <img src="images/man-01.png" alt="my pic" id="pic" />
         </div>
       </section>
@@ -82,7 +82,7 @@
           <div class="container text-center">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem; height: 18rem">
+                <div class="card card1" style="width: 18rem; height: 18rem">
                   <div class="card-body">
                     <span><i class="fa-brands fa-github fa-3x icon"></i></span>
                     <h5 class="card-title">Web Development</h5>
@@ -94,7 +94,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem; height: 18rem">
+                <div class="card card1" style="width: 18rem; height: 18rem">
                   <div class="card-body">
                     <span><i class="fa-solid fa-cube fa-3x icon"></i></span>
                     <h5 class="card-title">Web Design</h5>
@@ -106,7 +106,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem; height: 18rem">
+                <div class="card card1" style="width: 18rem; height: 18rem">
                   <div class="card-body">
                     <span
                       ><i class="fa-solid fa-file-video fa-3x icon"></i
@@ -124,7 +124,7 @@
           <div class="container text-center">
             <div class="row">
               <div class="col">
-                <div class="card" style="width: 18rem; height: 18rem">
+                <div class="card card1" style="width: 18rem; height: 18rem">
                   <div class="card-body">
                     <span><i class="fa-solid fa-camera fa-3x icon"></i></span>
                     <h5 class="card-title">Photography</h5>
@@ -136,7 +136,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem; height: 18rem">
+                <div class="card card1" style="width: 18rem; height: 18rem">
                   <div class="card-body">
                     <span><i class="fa-brands fa-apple fa-3x icon"></i></span>
                     <h5 class="card-title">App Developing</h5>
@@ -148,7 +148,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem; height: 18rem">
+                <div class="card card1" style="width: 18rem; height: 18rem">
                   <div class="card-body">
                     <span><i class="fa-brands fa-yahoo fa-3x icon"></i></span>
                     <h5 class="card-title">SEO Expart</h5>
@@ -452,7 +452,6 @@
         </div>
         <div>
           <img src="images/logo-04-w.png" alt="">
-          
         </div>
         <div>
           <img src="images/logo-03-w.png" alt="">
@@ -464,9 +463,102 @@
           <img src="images/logo-05-w.png" alt="">
         </div>
       </section>
-      <section></section>
+      <section id="blog">
+        <div class="servicediv11">
+          <h6>LATEST POST</h6>
+          <h1>Latest blog</h1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
+          <div id="hr"></div>
+        </div>
+        <div class="servicediv12">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <div class="card card2" style="width: 20rem;">
+                  <img src="images/blog-2.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <div id="subtext">
+                      <p><i class="fa-solid fa-user"></i>&nbsp;&nbsp;By<span id="adminicon">&nbsp;admin</span>&nbsp;&nbsp;<i class="fa-solid fa-calendar"></i>&nbsp;&nbsp;Tuesday&nbsp;&nbsp;<i class="fa-solid fa-comments"></i>&nbsp;&nbsp;3</p>
+                    </div>
+                    <p class="card-text note">Ten Secrets You Will Not Want To Know</p>
+                    <a href="#" id="readme">Read More&nbsp;&nbsp;<i class="fa-solid fa-circle-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card card2" style="width: 20rem;">
+                  <img src="images/blog-1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <div id="subtext">
+                      <p><i class="fa-solid fa-user"></i>&nbsp;&nbsp;By<span id="adminicon">&nbsp;admin</span>&nbsp;&nbsp;<i class="fa-solid fa-calendar"></i>&nbsp;&nbsp;Tuesday&nbsp;&nbsp;<i class="fa-solid fa-comments"></i>&nbsp;&nbsp;3</p>
+                    </div>
+                    <p class="card-text note">You’ve gotta dance like there’s nobody watching</p>
+                    <a href="#" id="readme">Read More&nbsp;&nbsp;<i class="fa-solid fa-circle-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card card2" style="width: 20rem;">
+                  <img src="images/blog.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <div id="subtext">
+                      <p><i class="fa-solid fa-user"></i>&nbsp;&nbsp;By<span id="adminicon">&nbsp;admin</span>&nbsp;&nbsp;<i class="fa-solid fa-calendar"></i>&nbsp;&nbsp;Tuesday&nbsp;&nbsp;<i class="fa-solid fa-comments"></i>&nbsp;&nbsp;3</p>
+                    </div>
+                    <p class="card-text note">I must explain to you how all this mistaken idea</p>
+                    <a href="#" id="readme">Read More&nbsp;&nbsp;<i class="fa-solid fa-circle-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="contactme">
+        <div class="servicediv13">
+          <h6>HAVE ANY QUERY?</h6>
+          <h1>Contact Me</h1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
+          <div id="hr"></div>
+        </div>
+        <div class="servicediv14">
+          <div id="contact1">
+            <div><i class="fa-solid fa-location-dot fa-2x"></i></div>
+            <div><span>Locate us</span><br> King Street, Melbourne Victoria</div>
+          </div>
+          <div id="contact1">
+            <div><i class="fa-solid fa-phone fa-2x"></i></div>
+            <div><span>Give us a call</span><br> Office: +01-2345-6789</div>
+          </div>
+          <div id="contact1">
+            <div><i class="fa-regular fa-envelope fa-2x"></i></div>
+            <div><span>Get in online</span><br> contact@example.com</div>
+          </div>
+        </div>
+        <div id="contact-form">
+          <form action="">
+            <input type="text" id="text" name="name" placeholder="&nbsp;&nbsp;Your name..">
+            <input type="email" id="text" name="mail" placeholder="&nbsp;&nbsp;Your mail.."><br>
+            <input type="text" id="subject" name="Subject" placeholder="&nbsp;&nbsp;Your subject.."><br>
+            <!-- <input type="text" id="message" name="message" placeholder="&nbsp;&nbsp;Your message.."> -->
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message.."></textarea>
+            <button>Send Message</button>
+          </form>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div id="footerimg">
+        <img src="images/logo.png" alt="">
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div id="footerbtn">
+        <button><i class="fa-brands fa-facebook"></i></button>
+        <button><i class="fa-brands fa-twitter"></i></button>
+        <button><i class="fa-brands fa-instagram"></i></button>
+        <button><i class="fa-brands fa-pinterest"></i></button>
+      </div>
+      Copyright © 2023 <span>POMA</span> All Rights Reserved by ThemeBing.
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
